--- a/SmellStyle.css
+++ b/SmellStyle.css
@@ -1,11 +1,45 @@
-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+  /*
+  
+  
+  file: SmellStyle.css
+  .masthead {
+    position: relative;
+    background-color: #343a40;
+    background: url("../GitHubSmell/imgs/bcgnd.jpg") no-repeat center center;
+    background-size: cover;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+  
 
-textarea {
-    margin-top: 15px;
-    width: 75%;
-    height: 800px;
-}
+.masthead{
+    background-color: #1c447e;
+ }
+ 
+header.masthead:before {
+    content: "";
+    position: absolute;
+    background-color: #1c375e;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.5;
+  }
+  header.masthead h1, header.masthead .h1 {
+    font-size: 2rem;
+  }
+  @media (min-width: 768px) {
+    header.masthead {
+      padding-top: 12rem;
+      padding-bottom: 12rem;
+    }
+    header.masthead h1, header.masthead .h1 {
+      font-size: 3rem;
+    }
+  }
+  .mb-5 {
+    margin-bottom: 3rem !important;
+  } */
+  
+  
